# raroc-engine

./: .gitignore  CHANGELOG.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  run_raroc.py  sample_deals.csv  serve.py
api/: auth.py  emails.py  server.py  storage.py
demo_deck/: GLOSSARY.md  SCENARIO.md  build_deck.py  demo_numbers.py  openraroc_demo.pptx
deploy/: Dockerfile  Dockerfile.api  docker-compose.yml  setup.sh
deploy/caddy/: Caddyfile
docs/engine/: multiperiod-fixture-math.ipynb  multiperiod-spec.md
raroc_engine/: __init__.py  __main__.py  aggregate.py  analytics.py  bank_commentary.py  bank_pages.py  banks.py  benchmarks.py  calculator.py  cli.py  compare_pages.py  config.py  country_pages.py  curve_shocks.py  curves.py  insights.py  mcp_server.py  models.py  optimizer.py  period_engine.py  portfolio.py  report.py  repository.py  scenarios.py  schedule.py  seo_helpers.py  web.py
raroc_engine/data/curves/: README.md  eur_estr.csv  eur_euribor.csv  (+5 more)
raroc_engine/static/: index.html  landing.html  template.csv
repository/: bank_groups.csv  banks.csv  cost_calculation_coeffs.csv  exposure_calculation_coeffs.csv  fx_option_rate.csv  guarantee.csv  perimetre.csv  ratings.csv  remuneration_forward.csv  settings.csv  swap_rate.csv
scripts/: refresh_curves.py
tests/: test_aggregate.py  test_curve_shocks.py  test_curves.py  test_period_engine.py  test_portfolio.py  test_scenarios.py  test_schedule.py  test_v1_backcompat.py
tests/fixtures/: build_fixtures.py  period_projfin_10y_grace.yaml  period_rcf_5y.yaml  period_termloan_7y_amortising.yaml
(+3 files in other folders)
